# seekit

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
data/: info.yaml
data/pages/: baidu.har  bilibili.har  bing.har  brave.har  douyin.har  duckduckgo.har  google.har  reddit.har  so.har  sogou.har  threads.har  tiktok.har  toutiao.har  weibo.har  yandex.har  youtube.har  zhihu.har
docs/: conf.py  index.rst
pyserp/: __init__.py  base.py  qihoo.py
skills/seekit-latest-info/: SKILL.md
skills/seekit-live-search/: SKILL.md
src/: har.py
src/seekit/: __init__.py  cli.py  server.py
src/seekit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/seekit/providers/: __init__.py  _base.py  baidu.py  bilibili.py  bing.py  brave.py  douyin.py  duckduckgo.py  google.py  reddit.py  so.py  sogou.py  threads.py  tiktok.py  toutiao.py  weibo.py  yandex.py  youtube.py  zhihu.py
tests/: test_cli.py  test_parsers.py  test_request_templates.py
